# python-monorepo

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  EXAMPLE_NEW_PACKAGE.md  LICENSE  MODULE.bazel  README.md  add_package.py  bazel-bin  bazel-out  bazel-python-monorepo  bazel-testlogs  lock_requirements.txt  pyproject.toml  requirements_docs_lock.txt  requirements_lock.txt  ruff.toml  setup_template.py
.github/: dependabot.yml
.github/workflows/: bazel.yml  docs.yml  lint.yml  publish.yml  test.yml
docs/: BUILD.bazel  README.md  SETUP.md  lock_requirements.txt  requirements_lock.txt  sphinx_build.py
docs/source/: about.rst  api.rst  conf.py  index.rst  installation.rst  packages.rst
docs/source/_static/: .gitkeep
src/hildie/: _version.py
src/hildie/hildie_app/: __init__.py
src/hildie/hildie_archive_git_forks/: __init__.py  archiver.py
src/hildie/hildie_cli/: main.py
