"""Root BUILD file for Hildie monorepo."""

load("@rules_python//python:defs.bzl", "py_library")
load("@rules_python//python:packaging.bzl", "py_wheel")
load("//tools:hildie.bzl", "all_package_tests", "hildie_cli")

py_library(
    name = "hildie",
    srcs = glob(["src/hildie/**/*.py"]),
    imports = ["src"],
    visibility = ["//visibility:public"],
    deps = [
        "@pip//click",
        "@pip//requests",
    ],
)

hildie_cli(
    name = "hildie-cli",
    module = "hildie_cli",
)

hildie_cli(
    name = "hildie-archive-git-forks",
    module = "hildie_archive_git_forks",
)

py_wheel(
    name = "wheel",
    description_file = "README.md",
    distribution = "hildie",
    python_requires = ">=3.11",
    python_tag = "py3",
    strip_path_prefixes = ["src/"],
    version = "0.2.21",
    deps = [":hildie"],
)

all_package_tests(
    name = "all_tests",
    packages = [
        "archive-git-forks",
        "my-app",
        "my-cli",
        "my-library",
    ],
)
