"""Hildie Python Monorepo"""

module(
    name = "hildie",
    version = "0.1.0",
)

# https://registry.bazel.build/modules/rules_python
bazel_dep(name = "rules_python", version = "0.31.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
)
pip.parse(
    hub_name = "pip_docs",
    python_version = "3.12",
    requirements_lock = "//docs:requirements_lock.txt",
)
use_repo(pip, "pip", "pip_docs")
