"""Hildie Multi-Language Monorepo"""

module(
    name = "hildie",
    version = "0.1.0",
)

# ===== Python =====
# https://registry.bazel.build/modules/rules_python
bazel_dep(name = "rules_python", version = "1.8.4")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

# Main dependencies + dev tools (from pyproject.toml with dev extras)
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
)

# Documentation dependencies (from docs/pyproject.toml)
pip.parse(
    hub_name = "pip_docs",
    python_version = "3.12",
    requirements_lock = "//docs:requirements_lock.txt",
)
use_repo(pip, "pip", "pip_docs")

# ===== Java =====
bazel_dep(name = "rules_jvm_external", version = "6.10")
bazel_dep(name = "rules_java", version = "9.5.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "junit:junit:4.13.2",
        "org.junit.jupiter:junit-jupiter-api:5.9.2",
        "org.junit.jupiter:junit-jupiter-engine:5.9.2",
    ],
)
use_repo(maven, "maven")

# ===== Go =====
# Go builds are handled via go build (source/hildie/go/go.mod)
# Bazel is used for artifact collection and publishing

# ===== Rust =====
# Rust compilation disabled for now - use cargo directly for Rust builds
# bazel_dep(name = "rules_rust", version = "0.40.0")

# ===== Node.js / npm =====
# npm packages are built with standard npm tools (npm run build)
# Bazel is used for artifact collection and publishing
