[project]
name = "hildie"
description = "A collection of Python utilities and tools, named after the best dog"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Clinton Steiner", email = "clintonsteiner@gmail.com"}
]
maintainers = [
    {name = "Clinton Steiner", email = "clintonsteiner@gmail.com"}
]
keywords = ["utilities", "tools", "monorepo", "bazel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "click",
    "requests",
]
dynamic = ["version"]

[build-system]
requires = ["setuptools>=42", "setuptools-scm>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
check-unittest-super = "hildie.check_unittest_super:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.15.0",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme>=3.0.0",
    "roman",
    "sphinxcontrib-jquery",
]

[project.urls]
Homepage = "https://github.com/clintonsteiner/hildies-python-monorepo"
Repository = "https://github.com/clintonsteiner/hildies-python-monorepo"
Issues = "https://github.com/clintonsteiner/hildies-python-monorepo/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["hildie"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v"
testpaths = ["packages"]
python_files = ["test_*.py"]
