"""Documentation build rules for Hildie."""

load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "sphinx_build",
    srcs = ["sphinx_build.py"],
    main = "sphinx_build.py",
    deps = ["@pip_docs//sphinx"],
)

genrule(
    name = "docs",
    srcs = glob([
        "source/**/*.rst",
        "source/**/*.py",
        "source/**/*.png",
        "source/_static/**/*",
    ]) + [
        "source/.nojekyll",
        "//:hildie",
    ],
    outs = ["html_docs.tar.gz"],
    cmd = """
        TMPDIR=$$(mktemp -d)
        SRCDIR=$$TMPDIR/source
        mkdir -p $$SRCDIR/_static

        for src in $(SRCS); do
            [[ $$src == */source/* ]] && {
                rel=$${src#*docs/source/}
                mkdir -p $$(dirname $$SRCDIR/$$rel)
                cp $$src $$SRCDIR/$$rel
            }
        done

        PYTHONPATH=$$(pwd) $(location :sphinx_build) -b html $$SRCDIR $$TMPDIR/html
        tar -czf $@ -C $$TMPDIR html
        rm -rf $$TMPDIR
    """,
    tools = [":sphinx_build"],
    visibility = ["//visibility:public"],
)

alias(
    name = "html",
    actual = ":docs",
)
